<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.HomeFragment">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/separation_start"></androidx.constraintlayout.widget.Guideline>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/separation_end"></androidx.constraintlayout.widget.Guideline>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="365dp"></androidx.constraintlayout.widget.Guideline>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.60"></androidx.constraintlayout.widget.Guideline>


            <ImageView
                android:id="@+id/imageLogin"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textTitle"
                app:layout_constraintStart_toStartOf="@id/guidelineOne"
                app:layout_constraintEnd_toEndOf="@id/guidelineTwo"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="1"
                android:layout_marginBottom="16dp"
                android:src="@drawable/bcp"></ImageView>


            <View
                android:id="@+id/viewContainerSearch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/buttonFilter"
                app:layout_constraintBottom_toBottomOf="@id/buttonFilter"
                app:layout_constraintStart_toStartOf="@id/guidelineOne"
                app:layout_constraintEnd_toEndOf="@id/guidelineFour"
                style="@style/Search.Container"></View>
            <ImageView
                android:id="@+id/imageViewSearch"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@id/edittextSearchDiscount"
                app:layout_constraintBottom_toBottomOf="@id/edittextSearchDiscount"
                app:layout_constraintStart_toStartOf="@id/guidelineOne"
                app:layout_constraintEnd_toStartOf="@id/edittextSearchDiscount"
                android:layout_marginStart="@dimen/size_sixteen"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_baseline_search"
                style="@style/Search.Icon"></ImageView>
            <TextView
                android:id="@+id/edittextSearchDiscount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/buttonFilter"
                app:layout_constraintStart_toEndOf="@id/imageViewSearch"
                app:layout_constraintEnd_toStartOf="@id/buttonFilter"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/search_discount"
                style="@style/Search.Input"></TextView>
            <EditText
                android:id="@+id/edittextSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@id/edittextSearchDiscount"
                app:layout_constraintBottom_toBottomOf="@id/buttonFilter"
                app:layout_constraintStart_toEndOf="@id/imageViewSearch"
                app:layout_constraintEnd_toStartOf="@id/buttonFilter"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/search_count"
                style="@style/Search.Input2"></EditText>

            <Button
                android:id="@+id/buttonFilter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageLogin"
                app:layout_constraintStart_toEndOf="@id/guidelineFour"
                app:layout_constraintEnd_toEndOf="@id/guidelineTwo"
                android:layout_marginTop="48dp"
                android:textAlignment="textStart"
                android:text="@string/action_filtersDol"
                style="@style/ImageButtonFirst"></Button>

            <View
                android:id="@+id/viewContainerSearch2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/buttonFilter2"
                app:layout_constraintBottom_toBottomOf="@id/buttonFilter2"
                app:layout_constraintStart_toStartOf="@id/guidelineOne"
                app:layout_constraintEnd_toEndOf="@id/guidelineFour"
                style="@style/Search.Container"></View>
            <ImageView
                android:id="@+id/imageViewSearch2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="@id/edittextSearchDiscount2"
                app:layout_constraintBottom_toBottomOf="@id/edittextSearchDiscount2"
                app:layout_constraintStart_toStartOf="@id/guidelineOne"
                app:layout_constraintEnd_toStartOf="@id/edittextSearchDiscount2"
                android:layout_marginStart="@dimen/size_sixteen"
                android:layout_marginTop="1dp"
                android:src="@drawable/ic_baseline_search"
                style="@style/Search.Icon"></ImageView>
            <TextView
                android:id="@+id/edittextSearchDiscount2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/buttonFilter2"
                app:layout_constraintStart_toEndOf="@id/imageViewSearch2"
                app:layout_constraintEnd_toStartOf="@id/buttonFilter2"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/search_receive"
                style="@style/Search.Input"></TextView>
            <EditText
                android:id="@+id/edittextSearch2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@id/edittextSearchDiscount2"
                app:layout_constraintBottom_toBottomOf="@id/buttonFilter2"
                app:layout_constraintStart_toEndOf="@id/imageViewSearch2"
                app:layout_constraintEnd_toStartOf="@id/buttonFilter2"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="0.0"
                style="@style/Search.Input2"></EditText>

            <Button
                android:id="@+id/buttonFilter2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@id/buttonFilter"
                app:layout_constraintStart_toEndOf="@id/guidelineFour"
                app:layout_constraintEnd_toEndOf="@id/guidelineTwo"
                android:textAlignment="textStart"
                android:text="@string/action_filtersSol"
                style="@style/ImageButtonSecond"></Button>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                app:layout_anchor="@id/guidelineTwo"
                android:layout_marginStart="75dp"
                android:layout_gravity="center|end"
                app:layout_constraintTop_toTopOf="@id/buttonFilter"
                app:layout_constraintBottom_toBottomOf="@id/buttonFilter2"
                app:layout_constraintStart_toEndOf="@id/guidelineFour"
                app:layout_constraintEnd_toEndOf="@id/guidelineTwo"
                android:src="@drawable/reload"
                android:backgroundTint="@color/white"
                app:tint="@color/black"></com.google.android.material.floatingactionbutton.FloatingActionButton>

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/buttonFilter2"
                app:layout_constraintStart_toStartOf="@id/guidelineOne"
                app:layout_constraintEnd_toEndOf="@id/guidelineTwo"
                android:layout_marginBottom="14dp"
                android:text="@string/login_desc"
                style="@style/Title"></TextView>



            <include
                android:id="@+id/empty_container"
                layout="@layout/empty_container"
                android:visibility="gone" />

            <Button
                android:theme="@style/ProductDetailTheme"
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guidelineOne"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/action_init"
                style="@style/Button"></Button>
</androidx.constraintlayout.widget.ConstraintLayout>
